--- a/templates/base.html
+++ b/templates/base.html
@@ -343,12 +343,7 @@
                       </a>
                     </li>
                     <li>
-                      <a href="{% url 'assignment:assignment' %}" class="sideMenuNav3Link">
-                        <div class="sideMenuNav3Menu">고정업무배정</div>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="{% url 'assignment:assignment_data' %}" class="sideMenuNav3Link">
+                      <a href="{% url 'assignment:fixed_assignment' %}" class="sideMenuNav3Link">
                         <div class="sideMenuNav3Menu">고정업무관리</div>
                       </a>
                     </li>
