--- a/static/css/humanresource/administrator_schedule.css
+++ b/static/css/humanresource/administrator_schedule.css
@@ -63,7 +63,7 @@
     align-items: center;
     height: 3rem;
     background-color: white;
-    font-size: 1.4rem;
+    font-size: 1.6rem;
 }
 
 .canbanContents{
@@ -73,19 +73,19 @@
 
 .canbanBox{
     width: 100%;
-    height: 12.2rem;
+    height: 15rem;
     background-color: white;
-    margin-bottom: 1rem;
-    font-size: 1rem;
+    font-size: 1.4rem;
 }
 
 .addTodo{
     height: 4rem;
     display: flex;
     justify-content: center;
-    font-size: 1.4rem;
+    font-size: 1.6rem;
     color: #797979;
     cursor: pointer;
+    align-items: center;
 }
 .canbanHeaderHeader{
     display: flex;
@@ -133,6 +133,7 @@
 .progressBtn{
     width: 4rem;
     height: 2rem;
+    cursor: pointer;
 }
 
 .white{
@@ -149,4 +150,21 @@
 
 .doneBtn{
     background-color: #bcbcbb;
+    cursor:default ;
+}
+
+/* 기본 스타일 */
+#datePicker {
+    font-size: 1.6rem;
+    border: 0.1rem solid #ccc;
+    border-radius: 0.4rem;
+    cursor: pointer;
+}
+
+.searchName{
+    font-size: 1.6rem;
+}
+
+#none{
+    display: none;
 }
